[gd_scene load_steps=6 format=2]

[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/droid-sans/DroidSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://result_list_item.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[node name="ResultListItem" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
size_flags_horizontal = 11
size_flags_vertical = 11
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 32.0
custom_constants/margin_right = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLabel" type="Label" parent="HBoxContainer"]
margin_left = 34.0
margin_top = 4.0
margin_right = 74.0
margin_bottom = 27.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 1 )
text = "1."

[node name="NameLabel" type="Label" parent="HBoxContainer"]
margin_left = 78.0
margin_right = 926.0
margin_bottom = 32.0
size_flags_horizontal = 11
size_flags_vertical = 12
custom_fonts/font = SubResource( 2 )
text = "Kjell Winblad"

[node name="TimeLabel" type="Label" parent="HBoxContainer"]
margin_left = 930.0
margin_top = 4.0
margin_right = 990.0
margin_bottom = 27.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 1 )
text = "01:32:0"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 994.0
margin_right = 1024.0
margin_bottom = 32.0
custom_constants/margin_right = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 40.0
